@@ -1,3 +1,8 @@
+2013-03-14  Khaled Hosny  <khaledhosny@eglug.org>
+
+	 * src/dvi.c, src/dvicodes.h, vf.c: Revert "Support DVI-IVD inspired text
+	 reflection for XeTeX".
+
 2013-02-25  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* src/dpxutil.[ch]: Reduce diffs with dvipdfmx.
